updated the project

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-# URL where backend is running (Use localhost for dev, Render URL for prod)
-VITE_API_URL=http://localhost:3000/api
+# We point to the "base" of your project system
+VITE_API_URL=http://localhost:3000/api/home
